--- a/web-app/app/views/main.scala.html
+++ b/web-app/app/views/main.scala.html
@@ -17,6 +17,7 @@
 
     <script src="@routes.WebJarAssets.at(WebJarAssets.locate("jquery.min.js"))"></script>
     <script src="@routes.WebJarAssets.at(WebJarAssets.locate("bootswatch-flatly", "bootstrap.min.js"))"></script>
+    <script src="@routes.WebJarAssets.at(WebJarAssets.locate("knockout", "knockout.js"))"></script>
     <script src="@routes.Assets.at("js/main.js")"></script>
   </body>
 </html>
