--- a/web-app/app/views/main.scala.html
+++ b/web-app/app/views/main.scala.html
@@ -5,7 +5,7 @@
 <html>
   <head>
     <title>@Messages("title")</title>
-    <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("img/favicon.png")">
+    <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("img/favicon.ico")">
     <link rel="stylesheet" media="screen" href="@routes.WebJarAssets.at(WebJarAssets.locate("bootswatch-flatly", "bootstrap.min.css"))">
     <link rel="stylesheet" media="screen" href="@routes.Assets.at("css/main.css")">
   </head>
