registration/login works

--- a/web-app/app/views/login.scala.html
+++ b/web-app/app/views/login.scala.html
@@ -9,7 +9,7 @@
           <input type="hidden" name="loginUrl" value="@if(registerForm.data.get("loginUrl").isDefined) {@registerForm.data.get("loginUrl")} else {@request.uri}" />
           @if(loginForm.hasErrors) {
             <p class="alert alert-danger">
-            @loginForm.errors.map { msg => @Messages(msg.message)<br/> }
+            @loginForm.errors.map { msg => @if(msg.key != "") {@Messages(msg.key): }@Messages(msg.message, msg.args: _*)<br/> }
             </p>
           }
           <legend>@Messages("login")</legend>
@@ -41,7 +41,7 @@
           <input type="hidden" name="registerUrl" value="@if(registerForm.data.get("registerUrl").isDefined) {@registerForm.data.get("registerUrl")} else {@request.uri}" />
           @if(registerForm.hasErrors) {
             <p class="alert alert-danger">
-            @registerForm.errors.map { msg => @Messages(msg.message)<br/> }
+            @registerForm.errors.map { msg => @if(msg.key != "") {@Messages(msg.key): }@Messages(msg.message, msg.args: _*)<br/> }
             </p>
           }
           <legend>@Messages("register")</legend>
