project edit page and knockout mapping

--- a/web-app/app/views/main.scala.html
+++ b/web-app/app/views/main.scala.html
@@ -18,6 +18,7 @@
     <script src="@routes.WebJarAssets.at(WebJarAssets.locate("jquery.min.js"))"></script>
     <script src="@routes.WebJarAssets.at(WebJarAssets.locate("bootswatch-flatly", "bootstrap.min.js"))"></script>
     <script src="@routes.WebJarAssets.at(WebJarAssets.locate("knockout", "knockout.js"))"></script>
+    <script src="@routes.WebJarAssets.at(WebJarAssets.locate("knockout-mapping", "knockout.mapping.js"))"></script>
     <script src="@routes.Assets.at("js/main.js")"></script>
     @javaScriptInclude
   </body>
