more knockout magic for project edit page

--- a/web-app/app/views/projectEdit.scala.html
+++ b/web-app/app/views/projectEdit.scala.html
@@ -27,8 +27,10 @@
           </thead>
           <tbody data-bind="foreach: columns">
             <tr>
-              <td data-bind="text: columnName"></td>
-              <td data-bind="text: columnType"></td>
+              <td><input class="form-control" data-bind="value: columnName"></td>
+              <td>
+                <select class="form-control" data-bind="options: columnTypes, value: columnType"></select>
+              </td>
             </tr>
           </tbody>
         </table>
