--- a/web-app/app/views/main.scala.html
+++ b/web-app/app/views/main.scala.html
@@ -7,6 +7,7 @@
     <title>@Messages("title")</title>
     <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("img/favicon.ico")">
     <link rel="stylesheet" media="screen" href="@routes.WebJarAssets.at(WebJarAssets.locate("bootswatch-flatly", "bootstrap.min.css"))">
+    <link rel="stylesheet" media="screen" href="@routes.WebJarAssets.at(WebJarAssets.locate("font-awesome", "font-awesome.css"))">
     <link rel="stylesheet" media="screen" href="@routes.Assets.at("css/main.css")">
   </head>
   <body>
