--- a/web-app/app/views/projectEdit.scala.html
+++ b/web-app/app/views/projectEdit.scala.html
@@ -23,6 +23,7 @@
             <tr>
               <th>@Messages("column.name")</th>
               <th>@Messages("column.type")</th>
+              <th></th>
             </tr>
           </thead>
           <tbody data-bind="foreach: columns">
@@ -31,6 +32,9 @@
               <td>
                 <select class="form-control" data-bind="options: columnTypes, value: columnType"></select>
               </td>
+              <td>
+                <a href="#" class="btn btn-default deleteColumn"><i class="fa fa-trash"></i></a>
+              </td>
             </tr>
           </tbody>
         </table>
@@ -38,7 +42,7 @@
       </div>
       <div class="form-group">
         <div class="col-lg-10 col-lg-offset-2">
-          <button type="submit" class="btn btn-primary">@Messages(if(create) "create" else "edit")</button>
+          <button type="submit" class="btn btn-primary pull-right">@Messages(if(create) "create" else "edit")</button>
         </div>
       </div>
     </fieldset>
@@ -53,8 +57,16 @@
     var viewModel = ko.mapping.fromJS(model);
 
     ko.applyBindings(viewModel);
-    $("#newColumn" ).click(function() {
-      viewModel.columns.push(column);
+
+    $("#newColumn").click(function() {
+      viewModel.columns.push(cloneObservable(column));
+      return false;
+    });
+
+    $(document).on("click", ".deleteColumn", function () {
+      var removeItem = $(".deleteColumn").index(this);
+      console.log(removeItem);
+      return false;
     });
 
     function cloneObservable(observableObject) {
