--- a/web-app/app/views/projectEdit.scala.html
+++ b/web-app/app/views/projectEdit.scala.html
@@ -15,7 +15,7 @@
       <div class="form-group">
         <label class="col-lg-2 control-label" for="name">@Messages("name")</label>
         <div class="col-lg-10">
-          <input class="form-control" id="name" name="name" type="text" placeholder="@Messages("name")" data-bind="value: name">
+          <input class="form-control" id="name" name="name" type="text" placeholder="@Messages("name")" data-bind="value: name" required>
         </div>
       </div>
       <div class="form-group">
