--- a/web-app/app/views/login.scala.html
+++ b/web-app/app/views/login.scala.html
@@ -4,6 +4,7 @@
   <div class="row">
     <div class="col-xs-6">
       <div class="well">
+        @*TODO introduce knockout here*@
       @helper.form(routes.UserController.login, 'class -> "form-horizontal") {
         <fieldset>
           @if(loginForm.hasErrors) {
