--- a/web-app/app/views/projectList.scala.html
+++ b/web-app/app/views/projectList.scala.html
@@ -9,7 +9,7 @@
           <h2>@project.name</h2
         </div>
         <div class="col-xs-8">
-          @project.columns.mkString(",")
+          @project.getColumns.mkString(",")
         </div>
         <div class="col-xs-2">
           <a class="btn btn-primary" href="#">@Messages("details")</a>
