--- a/web-app/app/views/projectEdit.scala.html
+++ b/web-app/app/views/projectEdit.scala.html
@@ -44,7 +44,8 @@
         <a class="btn btn-default pull-right clearfix" id="newColumn" href="#">@Messages("column.new")</a>
       </div>
       <div class="form-group">
-        <div class="col-lg-10 col-lg-offset-2">
+        <div class="col-lg-12">
+          <a class="btn btn-danger pull-left" href="@routes.ProjectController.list">@Messages("back")</a>
           <button type="submit" class="btn btn-primary pull-right">@Messages(if("new".equals(hash)) "create" else "edit")</button>
         </div>
       </div>
