--- a/web-app/app/views/projectEdit.scala.html
+++ b/web-app/app/views/projectEdit.scala.html
@@ -30,7 +30,7 @@
             </tr>
           </thead>
           <tbody data-bind="foreach: columns">
-            <tr>
+            <tr class="columns">
               <td><input class="form-control columnName" data-bind="value: columnName" ></td>
               <td>
                 <select class="form-control columnType" data-bind="options: columnTypes, value: columnType"></select>
