--- a/web-app/app/views/projectList.scala.html
+++ b/web-app/app/views/projectList.scala.html
@@ -6,12 +6,13 @@
     <div class="well">
       <h2>@project.name</h2>
       <div class="row">
-        <div class="col-xs-10">
+        <div class="col-xs-8">
           @project.getColumns.map(column => column.name).mkString(",")
         </div>
-        <div class="col-xs-2">
+        <div class="col-xs-4">
           <a class="btn btn-primary" href="@routes.ProjectController.edit(project.hash)">@Messages("edit")</a>
           <a class="btn btn-info" href="@routes.TimeEntryController.list(project.hash)">@Messages("details")</a>
+          <a class="btn btn-danger" href="@routes.ProjectController.delete(project.hash)">@Messages("delete")</a>
         </div>
       </div>
     </div>
