--- a/web-app/app/views/login.scala.html
+++ b/web-app/app/views/login.scala.html
@@ -1,4 +1,4 @@
-@(loginForm: play.api.data.Form[UserController.Login], registerForm: play.api.data.Form[UserController.Register])(implicit request: play.api.mvc.Request[Any], messages: Messages)
+@(loginForm: play.api.data.Form[Login], registerForm: play.api.data.Form[Register])(implicit request: play.api.mvc.Request[Any], messages: Messages)
 
 @main() {
   <div class="row">
