refactoring, solved TODOs, must changed route names for this -> conflict with mapping function names

--- a/web-app/app/views/projectList.scala.html
+++ b/web-app/app/views/projectList.scala.html
@@ -11,7 +11,7 @@
         </div>
         <div class="col-xs-4">
           <a class="btn btn-primary" href="@routes.ProjectController.edit(project.hash)">@Messages("edit")</a>
-          <a class="btn btn-info" href="@routes.TimeEntryController.list(project.hash)">@Messages("details")</a>
+          <a class="btn btn-info" href="@routes.TimeEntryController.listEntries(project.hash)">@Messages("details")</a>
           <a class="btn btn-danger" href="@routes.ProjectController.delete(project.hash)">@Messages("delete")</a>
         </div>
       </div>
