--- a/web-app/app/views/projectEdit.scala.html
+++ b/web-app/app/views/projectEdit.scala.html
@@ -46,7 +46,7 @@
       </div>
       <div class="form-group">
         <div class="col-lg-12">
-          <a class="btn btn-danger pull-left" href="@routes.ProjectController.list">@Messages("back")</a>
+          <a class="btn btn-danger pull-left" href="@routes.ProjectController.listProjects">@Messages("back")</a>
           <button type="submit" class="btn btn-primary pull-right">@Messages(if("new".equals(hash)) "create" else "edit")</button>
         </div>
       </div>
