simplified qualified class delcaration

--- a/web-app/app/views/projectDetails.scala.html
+++ b/web-app/app/views/projectDetails.scala.html
@@ -1,4 +1,4 @@
-@(hash: String, timeEntryForm: play.api.data.Form[CaseEntries])(implicit request: play.api.mvc.Request[Any], messages: Messages)
+@(hash: String, timeEntryForm: Form[CaseEntries])(implicit request: Request[Any], messages: Messages)
 
 @import logic.JsonHelper
 
