--- a/web-app/app/views/projectEdit.scala.html
+++ b/web-app/app/views/projectEdit.scala.html
@@ -1,4 +1,4 @@
-@(hash: String, projectForm: play.api.data.Form[CaseProject], column: CaseColumn, columnTypes: String)(implicit request: play.api.mvc.Request[Any], messages: Messages)
+@(hash: String, projectForm: Form[CaseProject], column: CaseColumn, columnTypes: String)(implicit request: Request[Any], messages: Messages)
 
 @import logic.JsonHelper
 
