--- a/web-app/app/views/projectList.scala.html
+++ b/web-app/app/views/projectList.scala.html
@@ -1,4 +1,4 @@
-@(projects: List[neo4j.models.project.Project])(implicit request: play.api.mvc.Request[Any], messages: Messages)
+@(projects: List[neo4j.models.project.Project])(implicit request: Request[Any], messages: Messages)
 
 @main() {
 
