iterating over columns for th

--- a/web-app/app/views/projectDetails.scala.html
+++ b/web-app/app/views/projectDetails.scala.html
@@ -13,6 +13,15 @@
         </p>
       }
       <legend>@Messages("project"): <span data-bind="text: name"> </span></legend>
+      <div class="form-group">
+        <table class="table table-bordered table-striped">
+          <thead>
+            <tr data-bind="foreach: columns">
+              <th data-bind="text: columnName"></th>
+            </tr>
+          </thead>
+        </table>
+      </div>
     </fieldset>
   }
 </div>
