iterate over entries and columns -> $parent is your friend

--- a/web-app/app/views/projectDetails.scala.html
+++ b/web-app/app/views/projectDetails.scala.html
@@ -20,6 +20,11 @@
               <th data-bind="text: columnName"></th>
             </tr>
           </thead>
+          <tbody data-bind="foreach: entries">
+            <tr data-bind="foreach: $parent.columns">
+              TODO
+            </tr>
+          </tbody>
         </table>
       </div>
     </fieldset>
