--- a/web-app/app/views/projectDetails.scala.html
+++ b/web-app/app/views/projectDetails.scala.html
@@ -22,7 +22,7 @@
           </thead>
           <tbody data-bind="foreach: entries">
             <tr data-bind="foreach: $parent.columns">
-              <td>TODO</td>
+              <td data-bind="text: $parent.start"></td>
             </tr>
           </tbody>
         </table>
