--- a/web-app/app/views/projectDetails.scala.html
+++ b/web-app/app/views/projectDetails.scala.html
@@ -28,6 +28,7 @@
             </tr>
           </tbody>
         </table>
+        <a class="btn btn-danger pull-left clearfix" href="@routes.ProjectController.listProjects()">@Messages("back")</a>
         <a class="btn btn-default pull-right clearfix" id="newEntry" href="#">@Messages("entry.new")</a>
       </div>
     </fieldset>
