--- a/web-app/app/views/projectList.scala.html
+++ b/web-app/app/views/projectList.scala.html
@@ -17,5 +17,6 @@
       </div>
     </div>
   }
+  <a class="btn btn-danger pull-left" href="@routes.UserController.logout()">@Messages("logout")</a>
   <a class="btn btn-primary btn-lg pull-right" href="@routes.ProjectController.create()">@Messages("project.new")</a>
 }
