moved TODO, sill creepy...

--- a/web-app/app/views/projectEdit.scala.html
+++ b/web-app/app/views/projectEdit.scala.html
@@ -3,8 +3,7 @@
 @import logic.JsonHelper
 
 @main() {
-  @*TODO replace projectForm.get*@
-<div id="datamodel" class="well" data-page="project" data-model='@{Html(JsonHelper.toJson(projectForm.get))}' data-column='@{Html(JsonHelper.toJson(column))}' data-types='@{Html(columnTypes)}'>
+<div id="datamodel" class="well" data-page="project" data-model='@{Html(JsonHelper.toJson(projectForm))}' data-column='@{Html(JsonHelper.toJson(column))}' data-types='@{Html(columnTypes)}'>
   @helper.form(routes.ProjectController.post(hash), 'class -> "form-horizontal") {
     <fieldset>
       @if(projectForm.hasErrors) {
