--- a/web-app/app/views/projectDetails.scala.html
+++ b/web-app/app/views/projectDetails.scala.html
@@ -3,8 +3,7 @@
 @import logic.JsonHelper
 
 @main() {
-  @*TODO replace projectForm.get*@
-<div id="datamodel" class="well" data-page="details" data-model='@{Html(JsonHelper.toJson(timeEntryForm.get))}' data-entry='@{Html(JsonHelper.toJson(entry))}'>
+<div id="datamodel" class="well" data-page="details" data-model='@{Html(JsonHelper.toJson(timeEntryForm))}' data-entry='@{Html(JsonHelper.toJson(entry))}'>
   @helper.form(routes.TimeEntryController.post(hash), 'class -> "form-horizontal") {
     <fieldset>
       @if(timeEntryForm.hasErrors) {
