introduced datetimepicker and moment

--- a/web-app/app/views/main.scala.html
+++ b/web-app/app/views/main.scala.html
@@ -8,6 +8,7 @@
     <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("img/favicon.ico")">
     <link rel="stylesheet" media="screen" href="@routes.WebJarAssets.at(WebJarAssets.locate("bootswatch-flatly", "bootstrap.min.css"))">
     <link rel="stylesheet" media="screen" href="@routes.WebJarAssets.at(WebJarAssets.locate("font-awesome", "font-awesome.css"))">
+    <link rel="stylesheet" media="screen" href="@routes.WebJarAssets.at(WebJarAssets.locate("Eonasdan-bootstrap-datetimepicker", "bootstrap-datetimepicker.min.css"))">
     <link rel="stylesheet" media="screen" href="@routes.Assets.at("css/main.css")">
   </head>
   <body>
@@ -21,6 +22,8 @@
     <script src="@routes.WebJarAssets.at(WebJarAssets.locate("knockout", "knockout.js"))"></script>
     <script src="@routes.WebJarAssets.at(WebJarAssets.locate("knockout-mapping", "knockout.mapping.js"))"></script>
     <script src="@routes.WebJarAssets.at(WebJarAssets.locate("knockout-validation", "knockout.validation.min.js"))"></script>
+    <script src="@routes.WebJarAssets.at(WebJarAssets.locate("momentjs", "moment-with-locales.min.js"))"></script>
+    <script src="@routes.WebJarAssets.at(WebJarAssets.locate("Eonasdan-bootstrap-datetimepicker", "bootstrap-datetimepicker.min.js"))"></script>
     <script src="@routes.Assets.at("js/main.js")"></script>
   </body>
 </html>
