--- a/web-app/app/views/projectEdit.scala.html
+++ b/web-app/app/views/projectEdit.scala.html
@@ -36,12 +36,12 @@
                 <select class="form-control columnType" data-bind="options: columnTypes(), value: columnType"></select>
               </td>
               <td>
-                <a href="#" class="btn btn-default deleteColumn"><i class="fa fa-trash"></i></a>
+                <a href="#" class="btn btn-default deleteColumn" onclick="return false;"><i class="fa fa-trash"></i></a>
               </td>
             </tr>
           </tbody>
         </table>
-        <a class="btn btn-default pull-right clearfix" id="newColumn" href="#">@Messages("column.new")</a>
+        <a class="btn btn-default pull-right clearfix" id="newColumn" href="#" onclick="return false;">@Messages("column.new")</a>
       </div>
       <div class="form-group">
         <div class="col-lg-12">
