--- a/web-app/app/views/main.scala.html
+++ b/web-app/app/views/main.scala.html
@@ -22,7 +22,7 @@
     <script src="@routes.WebJarAssets.at(WebJarAssets.locate("knockout", "knockout.js"))"></script>
     <script src="@routes.WebJarAssets.at(WebJarAssets.locate("knockout-mapping", "knockout.mapping.js"))"></script>
     <script src="@routes.WebJarAssets.at(WebJarAssets.locate("knockout-validation", "knockout.validation.min.js"))"></script>
-    <script src="@routes.WebJarAssets.at(WebJarAssets.locate("momentjs", "moment-with-locales.min.js"))"></script>
+    <script src="@routes.WebJarAssets.at(WebJarAssets.locate("momentjs", "moment.min.js"))"></script>
     <script src="@routes.WebJarAssets.at(WebJarAssets.locate("Eonasdan-bootstrap-datetimepicker", "bootstrap-datetimepicker.min.js"))"></script>
     <script src="@routes.Assets.at("js/main.js")"></script>
   </body>
