form-group ... commented out

--- a/web-app/app/views/projectDetails.scala.html
+++ b/web-app/app/views/projectDetails.scala.html
@@ -22,9 +22,9 @@
           <tbody data-bind="foreach: entries">
             <tr data-bind="foreach: $parent.columns">
               <td>
-                <div class="form-group">
+                @*<div class="form-group">*@
                   <input data-bind="value: pickElement($parent, columnKey), attr: {type: pickType(columnType), class: pickClass(columnType)}" />
-                </div>
+                @*</div>*@
               </td>
             </tr>
           </tbody>
